# face-detection-demo

./: .gitignore  README.md  capture.py  common.py  detect.py  landmarks.py  pyproject.toml  recognize.py  train.py  verify_olivetti.py
