[project]
name = "opencv-mediapipe-demo"
version = "0.1.0"
description = "Face detection, landmarks and LBPH recognition with OpenCV and MediaPipe"
authors = [
    {name = "Walter Fan",email = "walter.fan@zoom.us"}
]
readme = "README.md"
# Lower bound 3.11: scikit-learn (verify extra) requires >=3.11.
# Upper bound <3.13: MediaPipe wheels are not yet published for 3.13+.
requires-python = ">=3.11,<3.13"
dependencies = [
    # LBPH (cv2.face) ships only with the contrib build; do NOT also install opencv-python.
    "opencv-contrib-python (>=4.8,<5.0)",
    # Cap below 0.10.22: the 0.10.30+ macOS arm64 wheels are Tasks-only builds
    # that dropped the legacy `mp.solutions.*` API these scripts rely on.
    "mediapipe (>=0.10.14,<0.10.22)",
    "numpy (>=1.24,<2.0)",
]

[project.optional-dependencies]
# Only needed for the Olivetti/ORL quick-verification script (verify_olivetti.py).
verify = ["scikit-learn (>=1.3)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
